hard-gists/1035890/run.log
=== Docker Run Log for 1035890 ===
Started at: Mi 29. Okt 11:46:06 CET 2025

[2025-10-29 11:46:06] START: Running container for 1035890
[2025-10-29 11:46:06] SUCCESS: Container 2d5faac349da5c2748e686b9788d730a9b63abba1c98f110cd1f14b7b18917a9 started for 1035890
=== Container logs for 1035890 ===
  File "/snippet.py", line 103
    print red('''MANUAL STEP: create Postgres user 'redacted' with password '2011Superhero' ''')
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1035890 ===
[2025-10-29 11:46:08] INFO: Container 2d5faac349da5c2748e686b9788d730a9b63abba1c98f110cd1f14b7b18917a9 has stopped
